# france-trip-2026-july

./: .gitignore  README.md  pyproject.toml  trip.txt
app/: main.py  models.py  weather.py
app/data/: trip.json
app/static/css/: animations.css  components.css  layout.css  tokens.css
app/static/js/: animations.js
app/templates/: base.html  day.html  index.html
app/templates/components/: card.html  header.html  nav.html  timeline.html
design/: DESIGN.md
