[project]
name = "france-trip-2026-july"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.27",
    "jinja2>=3.1.6",
    "pendulum>=3.2.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.46.0",
]
